# django-create-initial-user

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTOMATED_PUBLISHING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  LICENSE  Makefile  PRECOMMIT_SETUP.md  README.md  create-release.py  dev-test.py  example_settings.py  publish-to-pypi.py  pyproject.toml  quick_test.py  run_tests.py  setup-demo.py  setup-precommit.py  setup.cfg  tox.ini  verify_test_setup.py
.github/: WORKFLOWS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr.yml  publish.yml  release.yml  security.yml  status.yml  test.yml
create_initial_superuser/: __init__.py  apps.py  backends.py
docs/: contributing.md  faq.md  quick-start.md  security.md  troubleshooting.md
docs/assets/: ascii-logo.txt
tests/: README.md  conftest.py.bak  settings.py  test_apps.py  test_backends.py  test_backends_pytest.py.bak  test_imports.py  urls.py
